<resources>
    <string name="app_name">Tubes</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_utama">Halaman Utama</string>
    <string name="menu_bibit">Bibit dan Obat</string>
    <string name="menu_alat">Alat Pertanian</string>
    <string name="keranjang">Keranjang</string>
    <string name="transaksi">Transaksi</string>
    <string name="nota">Nota</string>
    <string name="logout">Logout</string>
    <string name="hasil_pertanian">Hasil Pertanian</string>
</resources>
